[package]
name = "raiap-test"
version = "0.1.0"
authors = ["shumy <micaelpedrosa@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
ed25519-dalek = { version = "1.0.0-pre.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1"
sha2 = "0.8"
base64 = "0.11"
